collapse transition fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   background-color: #333;
   width: 100%;
   height: 100vh;
-  max-height: auto;
   overflow: hidden;
   position: relative;
 }
